[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymacgen"
version = "1.0.0"
description = "generate mac addresses"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Pascal Eberlein", email = "pascal@eberlein.io" },
]
keywords = ["mac", "generator", "oui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
]
dependencies = [
  "pyoui==1.0.1",
  "loguru==0.7.3",
]

[project.urls]
Homepage = "https://github.com/nbdy/pymacgen"
Repository = "https://github.com/nbdy/pymacgen"

[project.scripts]
pymacgen = "pymacgen.__main__:main"
